@@ -6,7 +6,6 @@ plugins {
     id("cc.polyfrost.loom") version "0.10.0.5"
     id("dev.architectury.architectury-pack200") version "0.1.3"
     id("com.github.johnrengelman.shadow") version "8.1.1"
-    id("io.freefair.lombok") version "8.6"
     id("net.kyori.blossom") version "1.3.2"
 }
 
@@ -103,6 +102,7 @@ dependencies {
 
 tasks.withType(JavaCompile::class) {
     options.encoding = "UTF-8"
+    options.compilerArgs.addAll(listOf("-proc:full"))
 }
 
 tasks.withType(Jar::class) {
